infrastructure/prod/pihole/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
  namespace: dns
spec:
  type: LoadBalancer
  selector:
    app: pihole
  ports:
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-ui
  namespace: dns
spec:
  type: ClusterIP
  selector:
    app: pihole
  ports:
    - name: web
      port: 80
      targetPort: 80
