infrastructure/prod/pihole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: dns
  annotations:
    cert-manager.io/cluster-issuer: "homelab-ca"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pihole.home.t12.io
      secretName: pihole-tls
  rules:
    - host: pihole.home.t12.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-ui
                port:
                  number: 80
